# aixion-control-tower

./: .gitignore  README.md
backend/: README.md  pyproject.toml
backend/app/: agent_auth.py  agent_credential_models.py  agent_routes.py  agent_task_cancel.py  agent_task_models.py  agent_task_notifications.py  agent_task_retry.py  agent_task_routes.py  agent_worker_branch_plan.py  agent_worker_claims.py  agent_worker_container_plan.py  agent_worker_container_validation.py  agent_worker_dry_run.py  agent_worker_file_plan.py  agent_worker_github_branch.py  agent_worker_github_files.py  agent_worker_github_pr.py  agent_worker_orchestrator.py  agent_worker_validation_plan.py  agent_worker_validation_runner.py  agent_worker_workspace.py  approval_integrity.py  approval_lifecycle.py  audit_routes.py  auth.py  auth_routes.py  child_mcp_test_server.py  connector_credentials.py  connector_models.py  connector_routes.py  connector_schema_mapper.py  connector_simulator.py  connector_templates.py  connector_webhook.py  database_migrations.py  demo_data.py  demo_smoke_validation.py  email_policy.py  external_agent_readiness.py  github_runner.py  (+21 more)
backend/scripts/: demo_data.py  generate_release_validation_summary.py  print_phase0_real_device_smoke.py  run_agent_worker_branch_plan.py  run_agent_worker_container_plan.py  run_agent_worker_dry_run.py  run_agent_worker_file_plan.py  run_agent_worker_github_branch.py  run_agent_worker_github_files.py  run_agent_worker_github_pr.py  run_agent_worker_orchestrator.py  run_agent_worker_validation_plan.py  run_agent_worker_validation_runner.py  (+4 more)
(+282 files in other folders)
